--- a/contact.html
+++ b/contact.html
@@ -157,23 +157,10 @@
   <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
 
   <!-- Navbar -->
-  <link rel="stylesheet" href="/assets/feedback.css">
-  <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
-  <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
-  <script src="/assets/khotwa-api.js?v=1766761756"></script>
-  <link rel="stylesheet" href="/assets/design-system.css">
-  <link rel="stylesheet" href="/assets/enhanced-navbar.css">
-  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
-</head>
-<body>
-  <!-- Skip link (لغتين) -->
-  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
-  <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
-
-  <!-- Navbar -->
+<!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية" aria-current="page">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
         <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
@@ -227,8 +214,23 @@
                 <h3 data-lang="ar">معلومات عنا</h3>
                 <h3 data-lang="en" hidden aria-hidden="true">About Us</h3>
                 <a href="/about.html"><span data-lang="ar">👥 من نحن</span><span data-lang="en" hidden aria-hidden="true">👥 About Us</span></a>
+                <a href="/gallery.html"><span data-lang="ar">📸 معرض الصور</span><span data-lang="en" hidden aria-hidden="true">📸 Gallery</span></a>
+                <a href="/faq.html"><span data-lang="ar">❓ الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">❓ FAQ</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
-  <main class="container" id="main">
+        <a href="/contact.html"><span data-lang="ar">اتصل بنا</span><span data-lang="en" hidden aria-hidden="true">Contact</span></a>
+        
+        <button class="lang-toggle" id="lang-toggle" type="button" aria-label="تغيير اللغة">
+          <span data-lang="ar">English</span><span data-lang="en" hidden aria-hidden="true">عربي</span>
+        </button>
+      </div>
+    </div>
+  </nav>
+
+<main class="container" id="main">
     <section>
       <div class="section-head">
         <h2 data-lang="ar">راسلنا</h2>
