Add cache busting to force JavaScript updates

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
-  <script src="/assets/khotwa-api.js?v=1766761756"></script>
+  <script src="/assets/khotwa-api.js?v=1766974489"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
@@ -515,20 +515,20 @@
   
   <!-- الميزات المحسّنة -->
   <link rel="stylesheet" href="/assets/features.css">
-  <script src="/assets/features.js" defer></script>
-  <script src="/assets/pagination.js"></script>
-  <script src="/assets/advanced-filters.js"></script>
-  <script src="/assets/feedback.js"></script>
-  <script src="/assets/newsletter.js"></script>
-  <script src="/assets/form-validation.js"></script>
-  <script src="/assets/comments-and-registration.js"></script>
-  <script src="/assets/all-features.js"></script>
-  <script src="/assets/admin-button.js"></script>
-  <script src="/assets/feedback-button.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/settings-loader.js"></script>
-    <script src="/js/language-toggle.js"></script>
-<script src="js/menu-toggle.js"></script>
+  <script src="/assets/features.js?v=1766974489" defer></script>
+  <script src="/assets/pagination.js?v=1766974489"></script>
+  <script src="/assets/advanced-filters.js?v=1766974489"></script>
+  <script src="/assets/feedback.js?v=1766974489"></script>
+  <script src="/assets/newsletter.js?v=1766974489"></script>
+  <script src="/assets/form-validation.js?v=1766974489"></script>
+  <script src="/assets/comments-and-registration.js?v=1766974489"></script>
+  <script src="/assets/all-features.js?v=1766974489"></script>
+  <script src="/assets/admin-button.js?v=1766974489"></script>
+  <script src="/assets/feedback-button.js?v=1766974489"></script>
+    <script src="js/config.js?v=1766974489"></script>
+    <script src="js/settings-loader.js?v=1766974489"></script>
+    <script src="/js/language-toggle.js?v=1766974489"></script>
+<script src="js/menu-toggle.js?v=1766974489"></script>
 <script>
 // Mega Menu functionality
 document.addEventListener('DOMContentLoaded', function() {
