--- a/event-detail.html
+++ b/event-detail.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
 
-  <script src="/assets/khotwa-api.js"></script>
+  <script src="/assets/khotwa-api.js?v=1766974489"></script>
 
   <style>
     .event-detail {
