Add cache control meta tags and update khotwa-api timestamp

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="color-scheme" content="light dark"/>
+  <!-- Prevent caching for dynamic content -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta http-equiv="Expires" content="0"/>
   <title>مجلس طلاب خطوة – Khotwa</title>
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/index.html"/>
@@ -145,7 +149,7 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
-  <script src="/assets/khotwa-api.js?v=1766974489"></script>
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
