🔧 Fix: Update Backend URL and unify version numbers
- Replace old Backend URL with new one (khotwabknd-gj8oeubu.manus.space)
- Unify all version numbers to v=1766975537
- Fix CORS errors
- Fix 404 errors
- Fix SyntaxErrors from duplicate script loading

This fixes all errors shown in Developer Tools Console.

--- a/courses.html
+++ b/courses.html
@@ -253,7 +253,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
+    const API_URL = 'https://khotwabknd-gj8oeubu.manus.space/api/trpc';
     
     // Fetch courses from backend
     async function fetchCourses() {
