--- a/volunteer-details.html
+++ b/volunteer-details.html
@@ -390,7 +390,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://3000-ivtx8t5s8uaytpylv5zyf-b88825ad.manus-asia.computer/api/trpc';
+    const API_URL = 'https://khotwabknd-gj8oeubu.manus.space/api/trpc';
     
     // Get opportunity ID from URL
     const urlParams = new URLSearchParams(window.location.search);
