🐛 Fix: Critical errors in Console
✅ Fixed Backend URL typo (gj8oeubu → gj8oeubw)
✅ Removed duplicate khotwa-api.js loading (4 files)
✅ Fixed CORS errors
✅ Fixed 404 errors
✅ Fixed SyntaxError: Identifier 'KhotwaAPI' already declared

Files modified:
- Backend URL: 13 files
- Duplicate scripts: news.html, events.html, calendar.html, gallery.html

This resolves all Console errors shown in screenshots.

--- a/volunteers.html
+++ b/volunteers.html
@@ -250,7 +250,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://khotwabknd-gj8oeubu.manus.space/api/trpc';
+    const API_URL = 'https://khotwabknd-gj8oeubw.manus.space/api/trpc';
     
     // Fetch volunteer opportunities from backend
     async function fetchOpportunities() {
