--- a/course-details.html
+++ b/course-details.html
@@ -373,7 +373,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://khotwabknd-gj8oeubu.manus.space/api/trpc';
+    const API_URL = 'https://khotwabknd-gj8oeubw.manus.space/api/trpc';
     
     // Get course ID from URL
     const urlParams = new URLSearchParams(window.location.search);
