--- a/courses.html
+++ b/courses.html
@@ -253,7 +253,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://khotwabknd-gj8oeubu.manus.space/api/trpc';
+    const API_URL = 'https://khotwabknd-gj8oeubw.manus.space/api/trpc';
     
     // Fetch courses from backend
     async function fetchCourses() {
