--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!-- courses.html -->
 <!doctype html>
 <html lang="ar" dir="rtl">
@@ -23,6 +24,7 @@
   <link rel="stylesheet" href="/assets/khotwa-theme.css">
   <link rel="stylesheet" href="/assets/features.css">
   <link rel="stylesheet" href="/assets/courses-volunteers.css">
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
 </head>
 <body>
   <a href="#main" class="skip-link">انتقل إلى المحتوى</a>
