--- a/jobs.html
+++ b/jobs.html
@@ -280,5 +280,12 @@
     <script src="/js/language-toggle.js"></script>
 <script src="js/menu-toggle.js"></script>
   <script src="/assets/site-settings-loader.js"></script>
+
+<footer aria-label="تذييل الموقع">
+    <div class="container foot">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+    </div>
+  </footer>
 </body>
 </html>
