--- a/resources.html
+++ b/resources.html
@@ -140,6 +140,7 @@
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
     <link rel="stylesheet" href="assets/enhanced-navbar.css">
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
 </head>
 <body>
   <!-- Skip links -->
