--- a/404.html
+++ b/404.html
@@ -134,6 +134,7 @@
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
     <link rel="stylesheet" href="assets/enhanced-navbar.css">
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
 </head>
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
