--- a/volunteer-details.html
+++ b/volunteer-details.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <!-- volunteer-details.html -->
 <!doctype html>
 <html lang="ar" dir="rtl">
@@ -170,6 +171,7 @@
       margin: 1rem 0;
     }
   </style>
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
 </head>
 <body>
   <a href="#main" class="skip-link">انتقل إلى المحتوى</a>
