--- a/courses.html
+++ b/courses.html
@@ -255,16 +255,25 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
   <script>
-    const API_URL = 'https://khotwabknd-gj8oeubw.manus.space/api/trpc';
-    
-    // Fetch courses from backend
+    // Fetch courses from backend using REST API
     async function fetchCourses() {
       try {
-        const response = await fetch(`${API_URL}/courses.list`);
+        // Use KhotwaAPI if available
+        if (window.KhotwaAPI && window.KhotwaAPI.getCourses) {
+          const courses = await window.KhotwaAPI.getCourses();
+          return courses || [];
+        }
+        
+        // Fallback to direct REST API call
+        const response = await fetch('https://khotwabknd-gj8oeubw.manus.space/api/courses');
+        if (!response.ok) {
+          console.warn('Failed to fetch courses:', response.status);
+          return [];
+        }
         const data = await response.json();
-        return data.result?.data || [];
+        return data || [];
       } catch (error) {
-        console.error('Error fetching courses:', error);
+        console.warn('Error fetching courses:', error.message);
         return [];
       }
     }
