--- a/volunteers.html
+++ b/volunteers.html
@@ -254,14 +254,25 @@ document.addEventListener('DOMContentLoaded', function() {
   <script>
     const API_URL = 'https://khotwabknd-gj8oeubw.manus.space/api/trpc';
     
-    // Fetch volunteer opportunities from backend
+    // Fetch volunteer opportunities from backend using REST API
     async function fetchOpportunities() {
       try {
-        const response = await fetch(`${API_URL}/volunteers.listOpportunities`);
+        // Use KhotwaAPI if available
+        if (window.KhotwaAPI && window.KhotwaAPI.getVolunteers) {
+          const volunteers = await window.KhotwaAPI.getVolunteers();
+          return volunteers || [];
+        }
+        
+        // Fallback to direct REST API call
+        const response = await fetch('https://khotwabknd-gj8oeubw.manus.space/api/volunteers');
+        if (!response.ok) {
+          console.warn('Failed to fetch volunteers:', response.status);
+          return [];
+        }
         const data = await response.json();
-        return data.result?.data || [];
+        return data || [];
       } catch (error) {
-        console.error('Error fetching opportunities:', error);
+        console.warn('Error fetching volunteers:', error.message);
         return [];
       }
     }
