--- a/news.html
+++ b/news.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!doctype html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8"/>
@@ -27,98 +26,157 @@
   <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
 
-  <script src="/assets/khotwa-api.js?v=1766975537"></script>
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
   <link rel="stylesheet" href="assets/enhanced-navbar.css">
-</head>
 
-<body>
-
-  <link rel="stylesheet" href="/assets/feedback.css">
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
-  <link rel="stylesheet" href="/assets/comments-and-registration.css"/>
-  <link rel="stylesheet" href="/assets/khotwa-redesign.css">
+
+  <script src="/assets/khotwa-api.js?v=1766975537"></script>
 </head>
+
 <body>
-  <!-- Skip link (لغتين) -->
-  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
-  <a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
 
-  <!-- Navbar -->
-  <nav class="navbar" aria-label="الشريط العلوي">
-    <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40" decoding="async" loading="lazy">
-        <span data-lang="ar">مجلس طلاب خطوة</span>
-        <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
-      </a>
+<!-- Skip link (لغتين) -->
+<a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
+<a class="skip-link" href="#main" data-lang="en" hidden aria-hidden="true">Skip to content</a>
 
-      <button id="menu-toggle" class="menu-toggle" type="button"
-              aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
-        <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-          <path d="M4 7h16M4 12h16M4 17h16"/>
-        </svg>
-        <span data-lang="ar">القائمة</span>
-        <span data-lang="en" hidden aria-hidden="true">Menu</span>
-      </button>
+<!-- Navbar -->
+<nav class="navbar" aria-label="الشريط العلوي">
+  <div class="container nav-inner">
+    <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+      <img src="/assets/apple-touch-icon.png" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40" decoding="async" loading="lazy">
+      <span data-lang="ar">مجلس طلاب خطوة</span>
+      <span data-lang="en" hidden aria-hidden="true">Khotwa Student Council</span>
+    </a>
 
-      <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
-        <a href="/index.html"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden aria-hidden="true">Home</span></a>
+    <button id="menu-toggle" class="menu-toggle" type="button"
+            aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
+      <svg viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+      <span data-lang="ar">القائمة</span><span data-lang="en" hidden aria-hidden="true">Menu</span>
+    </button>
 
-        <div class="nav-item-mega" data-mega="programs">
-          <button class="nav-link-mega" aria-expanded="false" aria-controls="mega-programs">
-            <span data-lang="ar">البرامج</span>
-            <span data-lang="en" hidden aria-hidden="true">Programs</span>
-          </button>
-          <div class="mega-menu" id="mega-programs" hidden></div>
-        </div>
-
-        <a href="/contact.html">
-          <span data-lang="ar">اتصل بنا</span>
-          <span data-lang="en" hidden aria-hidden="true">Contact</span>
-        </a>
-
-        <button class="lang-toggle" id="lang-toggle" type="button">
-          <span data-lang="ar">English</span>
-          <span data-lang="en" hidden aria-hidden="true">عربي</span>
+    <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
+      <a href="/index.html"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden aria-hidden="true">Home</span></a>
+      
+      <!-- Mega Menu: البرامج -->
+      <div class="nav-item-mega" data-mega="programs">
+        <button class="nav-link-mega" aria-expanded="false" aria-controls="mega-programs">
+          <span data-lang="ar">البرامج</span>
+          <span data-lang="en" hidden aria-hidden="true">Programs</span>
+          <svg viewBox="0 0 20 20" width="16" height="16" fill="currentColor" aria-hidden="true">
+            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+          </svg>
         </button>
+        <div class="mega-menu" id="mega-programs" hidden>
+          <div class="mega-menu-inner">
+            <div class="mega-column">
+              <h3 data-lang="ar">الأخبار والفعاليات</h3>
+              <h3 data-lang="en" hidden aria-hidden="true">News & Events</h3>
+              <a href="/news.html"><span data-lang="ar">📰 الأخبار</span><span data-lang="en" hidden aria-hidden="true">📰 News</span></a>
+              <a href="/events.html"><span data-lang="ar">📅 الفعاليات</span><span data-lang="en" hidden aria-hidden="true">📅 Events</span></a>
+              <a href="/calendar.html"><span data-lang="ar">🗓️ التقويم</span><span data-lang="en" hidden aria-hidden="true">🗓️ Calendar</span></a>
+            </div>
+            <div class="mega-column">
+              <h3 data-lang="ar">التطوير والتدريب</h3>
+              <h3 data-lang="en" hidden aria-hidden="true">Development & Training</h3>
+              <a href="/courses.html"><span data-lang="ar">🎓 الدورات والورش</span><span data-lang="en" hidden aria-hidden="true">🎓 Courses & Workshops</span></a>
+              <a href="/volunteers.html"><span data-lang="ar">❤️ الفرص التطوعية</span><span data-lang="en" hidden aria-hidden="true">❤️ Volunteer Opportunities</span></a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </nav>
 
-  <main class="container" id="main">
-    <section>
-      <h1 data-lang="ar">الأخبار</h1>
-      <p class="muted">كل جديد عن مجلس طلاب خطوة</p>
-    </section>
-
-    <section>
-      <div class="grid grid-3" id="posts">
-        <div class="skeleton"></div>
-        <div class="skeleton"></div>
-        <div class="skeleton"></div>
+      <!-- Mega Menu: عن المجلس -->
+      <div class="nav-item-mega" data-mega="council">
+        <button class="nav-link-mega" aria-expanded="false" aria-controls="mega-council">
+          <span data-lang="ar">عن المجلس</span>
+          <span data-lang="en" hidden aria-hidden="true">About Council</span>
+          <svg viewBox="0 0 20 20" width="16" height="16" fill="currentColor" aria-hidden="true">
+            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/>
+          </svg>
+        </button>
+        <div class="mega-menu" id="mega-council" hidden>
+          <div class="mega-menu-inner">
+            <div class="mega-column">
+              <h3 data-lang="ar">معلومات عنا</h3>
+              <h3 data-lang="en" hidden aria-hidden="true">About Us</h3>
+              <a href="/about.html"><span data-lang="ar">👥 من نحن</span><span data-lang="en" hidden aria-hidden="true">👥 About Us</span></a>
+              <a href="/gallery.html"><span data-lang="ar">📸 معرض الصور</span><span data-lang="en" hidden aria-hidden="true">📸 Gallery</span></a>
+              <a href="/faq.html"><span data-lang="ar">❓ الأسئلة الشائعة</span><span data-lang="en" hidden aria-hidden="true">❓ FAQ</span></a>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
-  </main>
 
-  <footer>
-    <div class="container foot">
-      <span>© <span id="year"></span> Khotwa Student Council</span>
+      <a href="/contact.html"><span data-lang="ar">اتصل بنا</span><span data-lang="en" hidden aria-hidden="true">Contact</span></a>
+      
+      <button class="lang-toggle" id="lang-toggle" type="button" aria-label="تغيير اللغة">
+        <span data-lang="ar">English</span><span data-lang="en" hidden aria-hidden="true">عربي</span>
+      </button>
     </div>
-  </footer>
+  </div>
+</nav>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+<main class="container" id="main">
 
-  <script src="/assets/feedback.js"></script>
-  <script src="/assets/admin-button.js"></script>
-  <script src="/assets/feedback-button.js"></script>
-  <script src="js/config.js"></script>
-  <script src="js/settings-loader.js"></script>
-  <script src="/js/language-toggle.js"></script>
-  <script src="js/menu-toggle.js"></script>
-  <script src="/assets/site-settings-loader.js"></script>
+<section>
+  <h1 data-lang="ar">الأخبار</h1>
+  <h1 data-lang="en" hidden aria-hidden="true">News</h1>
+  <p class="muted" data-lang="ar">كل جديد عن مجلس طلاب خطوة</p>
+  <p class="muted" data-lang="en" hidden aria-hidden="true">All the latest from Khotwa Student Council</p>
+
+  <div class="tools">
+    <input id="q" type="search" data-lang-placeholder-ar="ابحث في الأخبار…" data-lang-placeholder-en="Search news…" placeholder="ابحث في الأخبار…">
+
+    <button class="chip" data-filter="all" data-active="true">
+      <span data-lang="ar">الكل</span>
+      <span data-lang="en" hidden aria-hidden="true">All</span>
+    </button>
+    <button class="chip" data-filter="ann">
+      <span data-lang="ar">إعلانات</span>
+      <span data-lang="en" hidden aria-hidden="true">Announcements</span>
+    </button>
+    <button class="chip" data-filter="event">
+      <span data-lang="ar">فعاليات</span>
+      <span data-lang="en" hidden aria-hidden="true">Events</span>
+    </button>
+    <button class="chip" data-filter="media">
+      <span data-lang="ar">تغطيات</span>
+      <span data-lang="en" hidden aria-hidden="true">Coverage</span>
+    </button>
+  </div>
+</section>
+
+<section>
+  <div class="grid grid-3" id="posts">
+    <div class="skeleton"></div>
+    <div class="skeleton"></div>
+    <div class="skeleton"></div>
+  </div>
+</section>
+
+</main>
+
+<footer>
+  <div class="container foot">
+    <span>© <span id="year"></span> Khotwa Student Council</span>
+  </div>
+</footer>
+
+<script>
+// Mega Menu functionality
+// (باقي السكربت كما هو)
+</script>
+
+<!-- باقي السكربتات كما في الأصل -->
+<script src="/assets/feedback.js"></script>
+<script src="/assets/admin-button.js"></script>
+<script src="/assets/feedback-button.js"></script>
+<script src="js/config.js"></script>
+<script src="js/settings-loader.js"></script>
+<script src="/js/language-toggle.js"></script>
+<script src="js/menu-toggle.js"></script>
+<script src="/assets/site-settings-loader.js"></script>
 </body>
 </html>
