--- a/about.html
+++ b/about.html
@@ -4,26 +4,44 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>من نحن – Khotwa</title>
+  
   <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
+
   <style>
-    /* تنسيق سريع لضمان عدم تداخل القوائم كما في صورتك */
-    .nav-links { position: relative; z-index: 1000; }
-    .mega-menu { top: 100%; }
-    .hero-section { padding: 60px 20px; text-align: center; background: #f9fafb; }
-    .card-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 40px 0; }
-    .about-card { padding: 30px; border: 1px solid #eee; border-radius: 15px; background: white; }
-    .member-card img { width: 100%; border-radius: 12px; margin-bottom: 15px; }
+    /* حل مشكلة تداخل المنيو التي ظهرت في الصور */
+    .navbar { z-index: 1000 !important; position: sticky; top: 0; background: #fff; border-bottom: 1px solid #eee; }
+    .mega-menu { z-index: 1100 !important; display: none; }
+    .nav-item-mega:hover .mega-menu { display: block; }
+
+    /* تنسيق قسم من نحن */
+    .hero-about { padding: 60px 0; text-align: center; background: #fcfcfc; }
+    .grid-about { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin: 40px 0; }
+    .card-about { padding: 30px; border: 1px solid #eef0f2; border-radius: 20px; background: #fff; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
+    .card-about h3 { color: #1e40af; margin-bottom: 15px; }
+
+    /* تنسيق صور الأعضاء */
+    .members-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 25px; margin-top: 30px; }
+    .member-card { background: #fff; border: 1px solid #eee; border-radius: 15px; overflow: hidden; text-align: center; padding-bottom: 15px; transition: 0.3s; }
+    .member-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.08); }
+    .member-card img { width: 100%; aspect-ratio: 1/1; object-fit: cover; background: #f3f4f6; }
+    .member-card h3 { font-size: 1.1rem; margin: 15px 0 5px; }
+    .member-card p { color: #64748b; font-size: 0.9rem; margin: 0; }
+
+    [hidden] { display: none !important; }
   </style>
 </head>
 <body>
 
   <nav class="navbar">
-    <div class="container nav-inner">
-      <a class="brand" href="/index.html">مجلس طلاب خطوة</a>
+    <div class="container nav-inner" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
+      <a class="brand" href="/index.html" style="display: flex; align-items: center; gap: 10px;">
+        <img src="/assets/apple-touch-icon.png" width="40" alt="Logo">
+        <span>مجلس طلاب خطوة</span>
+      </a>
       <div class="nav-links">
         <a href="/index.html">الرئيسية</a>
-        <a href="/about.html">من نحن</a>
+        <a href="/about.html" style="font-weight: bold; color: #1e40af;">من نحن</a>
         <a href="/news.html">الأخبار</a>
         <a href="/events.html">الفعاليات</a>
         <a href="/calendar.html">التقويم</a>
@@ -31,35 +49,39 @@
     </div>
   </nav>
 
-  <div class="hero-section">
-    <h1 data-lang="ar">من نحن</h1>
-    <p class="muted">تعرف على رؤية وأهداف فريق مجلس طلاب خطوة</p>
-  </div>
-
   <main class="container">
-    <div class="card-container">
-      <div class="about-card" data-section="vision">
+    <header class="hero-about">
+      <h1>من نحن</h1>
+      <p class="muted">تعرف على رؤية وأهداف فريق مجلس طلاب خطوة - ملبورن</p>
+    </header>
+
+    <div class="grid-about">
+      <article class="card-about" data-section="vision">
         <h3>الرؤية</h3>
         <p>جاري التحميل...</p>
-      </div>
-      <div class="about-card" data-section="mission">
+      </article>
+      <article class="card-about" data-section="mission">
         <h3>الرسالة</h3>
         <p>جاري التحميل...</p>
-      </div>
-      <div class="about-card" data-section="organization">
+      </article>
+      <article class="card-about" data-section="organization">
         <h3>القيم</h3>
-        <p>جاري التحميل...</p>
-      </div>
+        <p>العمل الجماعي، الشفافية، الابتكار، والمسؤولية تجاه مجتمعنا الطلابي.</p>
+      </article>
     </div>
 
-    <section>
-      <h2 style="text-align: center; margin-bottom: 30px;">فريق العمل والمجلس</h2>
-      <div id="council-members-container" class="members-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px;">
+    <section style="margin-bottom: 60px;">
+      <h2 style="text-align: center; margin-bottom: 40px;">فريق العمل والمجلس</h2>
+      <div class="members-grid" id="council-members-container">
         </div>
     </section>
   </main>
 
+  <footer style="padding: 40px 0; border-top: 1px solid #eee; text-align: center;">
+    <p>© 2026 مجلس طلاب خطوة | ملبورن</p>
+  </footer>
+
   <script src="/js/config.js"></script>
-  <script src="/js/about-loader.js"></script> 
+  <script src="/js/about-loader.js"></script>
 </body>
 </html>
