--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
 
   <link rel="stylesheet" href="/assets/design-system.css">
   <link rel="stylesheet" href="/assets/khotwa-redesign.css">
-  <link rel="stylesheet" href="assets/enhanced-navbar.css">
+  <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <link rel="alternate" type="application/rss+xml" title="أخبار مجلس طلاب خطوة" href="/feed.xml">
 
