--- a/news.html
+++ b/news.html
@@ -123,10 +123,8 @@
     </div>
   </footer>
 
-<script>
-// Mega Menu functionality
-// (باقي السكربت كما هو)
-</script>
+  <script src="/assets/khotwa-api.js"></script>
+  <script>
 
 <!-- باقي السكربتات كما في الأصل -->
 <script src="/assets/feedback.js"></script>
