--- a/news.html
+++ b/news.html
@@ -123,17 +123,15 @@
     </div>
   </footer>
 
-  <script src="/assets/khotwa-api.js"></script>
-  <script>
-
-<!-- باقي السكربتات كما في الأصل -->
+<script src="/assets/khotwa-api.js"></script>
 <script src="/assets/feedback.js"></script>
 <script src="/assets/admin-button.js"></script>
 <script src="/assets/feedback-button.js"></script>
-<script src="js/config.js"></script>
-<script src="js/settings-loader.js"></script>
+<script src="/js/config.js"></script>
+<script src="/js/settings-loader.js"></script>
 <script src="/js/language-toggle.js"></script>
-<script src="js/menu-toggle.js"></script>
+<script src="/js/menu-toggle.js"></script>
 <script src="/assets/site-settings-loader.js"></script>
+
 </body>
 </html>
