--- a/calendar.html
+++ b/calendar.html
@@ -83,6 +83,21 @@
     </div>
   </main>
 
+ <footer style="background: #f8fafc; border-top: 1px solid #e2e8f0; padding: 3rem 0; margin-top: 4rem;">
+    <div class="container">
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center; gap: 2rem;">
+        <div>
+          <strong data-lang="ar">مجلس طلاب خطوة</strong>
+          <strong data-lang="en" hidden>Khotwa Council</strong>
+          <p style="font-size: 0.9rem; color: #64748b;">© <span id="year"></span> | <span data-lang="ar">ملبورن، أستراليا</span><span data-lang="en" hidden>Melbourne, Australia</span></p>
+        </div>
+        <div style="display: flex; gap: 1.5rem;">
+          <a href="https://instagram.com/khotwa.sc" style="color: #e1306c; text-decoration: none; font-weight: bold;">Instagram</a>
+          <a href="/contact.html" style="color: var(--primary); text-decoration: none;"><span data-lang="ar">تواصل معنا</span><span data-lang="en" hidden>Contact</span></a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script>
     // نظام تبديل اللغة
     function setLanguage(lang) {
