--- a/news.html
+++ b/news.html
@@ -97,46 +97,52 @@
   </div>
 </section>
 <script>
-(async function () {
-  const postsEl = document.getElementById('posts');
-  const qInput  = document.getElementById('q');
-  const chips   = document.querySelectorAll('.chip');
+document.addEventListener("DOMContentLoaded", async () => {
+  const postsEl = document.getElementById("posts");
+  const qInput  = document.getElementById("q");
+  const chips   = document.querySelectorAll(".chip");
 
-  let currentQuery = '';
-  let currentCategory = 'all';
+  let currentQuery = "";
+  let currentCategory = "all";
 
   async function loadNews() {
-    const lang = localStorage.getItem('khotwa_lang') || 'ar';
+    const lang = localStorage.getItem("language") || "ar";
+    postsEl.innerHTML = "<div class='muted'>Loading…</div>";
 
-    postsEl.innerHTML = '<div class="muted">Loading...</div>';
+    let items;
+    if (currentQuery || currentCategory !== "all") {
+      items = await KhotwaAPI.searchNews(
+        currentQuery,
+        currentCategory === "all" ? null : currentCategory,
+        "newest"
+      );
+    } else {
+      items = await KhotwaAPI.getNews();
+    }
 
-    const items =
-      currentQuery || currentCategory !== 'all'
-        ? await KhotwaAPI.searchNews(
-            currentQuery,
-            currentCategory === 'all' ? null : currentCategory,
-            'newest'
-          )
-        : await KhotwaAPI.getNews();
+    if (!items || !Array.isArray(items)) {
+      postsEl.innerHTML = "<div class='muted'>No news found.</div>";
+      return;
+    }
 
-    postsEl.innerHTML = '';
+    postsEl.innerHTML = "";
 
     items.forEach(item => {
       const title =
-        lang === 'ar'
-          ? item.titleAr || item.titleEn
-          : item.titleEn || item.titleAr;
+        lang === "ar"
+          ? item.titleAr || item.titleEn || ""
+          : item.titleEn || item.titleAr || "";
 
       const content =
-        lang === 'ar'
-          ? item.contentAr || item.contentEn
-          : item.contentEn || item.contentAr;
+        lang === "ar"
+          ? item.contentAr || item.contentEn || ""
+          : item.contentEn || item.contentAr || "";
 
-      const card = document.createElement('article');
-      card.className = 'post';
+      const card = document.createElement("article");
+      card.className = "post";
       card.innerHTML = `
         <h3>${title}</h3>
-        <p class="muted">${content.substring(0,150)}...</p>
+        <p class="muted">${content.substring(0,150)}${content.length > 150 ? "..." : ""}</p>
       `;
 
       card.onclick = () => {
@@ -147,23 +153,24 @@
     });
   }
 
-  qInput.addEventListener('input', e => {
+  qInput.addEventListener("input", e => {
     currentQuery = e.target.value.trim();
     loadNews();
   });
 
   chips.forEach(btn => {
-    btn.addEventListener('click', () => {
-      chips.forEach(b => b.dataset.active = 'false');
-      btn.dataset.active = 'true';
+    btn.addEventListener("click", () => {
+      chips.forEach(b => b.dataset.active = "false");
+      btn.dataset.active = "true";
       currentCategory = btn.dataset.filter;
       loadNews();
     });
   });
 
   loadNews();
-})();
+});
 </script>
+
 
 <section>
   <div class="grid grid-3" id="posts">
